Update to model 0.0.177
The more relevant changes in the new version of the model are the
following:

- Fix update method of environment endpoint, should be `Update` instead of
  `Patch`.

- Remove unimplemented `POST /api/service_logs/v1/cluster_logs/clusters/{uuid}/cluster_logs`
  method.
